# lenna-plugins

./: .gitignore  Cargo.toml  README.md  importmap.json  plugins.json
.github/workflows/: ci.yml
blur/: 138.js  138.js.map  962.js  962.js.map  Cargo.toml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
blur/js/: 962.app.js  app.js
blur/src/: index.js  lib.rs
canny/: 137.css  137.css.map  137.js  137.js.map  138.css  138.css.map  138.js  138.js.map  280.css  280.css.map  280.js  280.js.map  475.css  475.css.map  475.js  475.js.map  56.css  56.css.map  56.js  56.js.map  594.js  594.js.map  71.css  71.css.map  71.js  71.js.map  837.css  837.css.map  837.js  837.js.map  915.js  915.js.map  Cargo.toml  README.md  index.html  lenna.yml  main.css  main.css.map  main.js  main.js.map  (+6 more)
canny/js/: 915.app.js  app.js  app.js.map  chunk-4688696d.js  chunk-4688696d.js.map  chunk-5424d576.js  chunk-5424d576.js.map  chunk-6cc8a7af.js
canny/src/: App.vue  Widget.vue  index.js  lib.rs  main.js  wasm.rs
cartoonify/: .gitignore  138.js  138.js.map  384.js  384.js.map  444.js  444.js.map  Cargo.toml  README.md  lenna.yml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
cartoonify/src/: index.js  lib.rs
desaturate/: 138.js  138.js.map  397.js  397.js.map  Cargo.toml  lenna.yml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
desaturate/src/: index.js  lib.rs
dramatic/: 138.js  138.js.map  775.js  775.js.map  Cargo.toml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
dramatic/js/: 775.app.js  app.js
dramatic/src/: index.js  lib.rs
exif/: 138.css  138.css.map  138.js  138.js.map  156.css  156.css.map  156.js  156.js.map  252.css  252.css.map  252.js  252.js.map  308.css  308.css.map  308.js  308.js.map  358.css  358.css.map  358.js  358.js.map  577.js  577.js.map  594.js  594.js.map  800.css  800.css.map  800.js  800.js.map  913.js  913.js.map  981.css  981.css.map  981.js  981.js.map  Cargo.toml  main.css  main.css.map  main.js  main.js.map  package-lock.json  (+3 more)
exif-thumbnail/: 138.css  138.css.map  138.js  138.js.map  306.css  306.css.map  306.js  306.js.map  376.js  376.js.map  418.css  418.css.map  418.js  418.js.map  594.js  594.js.map  631.css  631.css.map  631.js  631.js.map  787.css  787.css.map  787.js  787.js.map  Cargo.toml  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map
exif-thumbnail/src/: Widget.vue  index.js  lib.rs
exif/src/: Widget.vue  index.js  lib.rs
lenna-plugins-py/: Cargo.toml  README.md  pyproject.toml
lenna-plugins-py/lenna_plugins_py/: __init__.py
lenna-plugins-py/src/: lib.rs
photon-filters/: 138.css  138.css.map  138.js  138.js.map  594.js  594.js.map  700.js  700.js.map  717.css  717.css.map  717.js  717.js.map  Cargo.toml  README.md  lenna.yml  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
photon-filters/js/: 700.app.js  app.js
photon-filters/src/: App.vue  Widget.vue  index.js  lib.rs
resize/: 138.js  138.js.map  706.js  706.js.map  Cargo.toml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
resize/js/: 706.app.js  app.js
resize/src/: index.js  lib.rs
rotate/: 124.css  124.css.map  124.js  124.js.map  138.css  138.css.map  138.js  138.js.map  417.css  417.css.map  417.js  417.js.map  433.css  433.css.map  433.js  433.js.map  439.css  439.css.map  439.js  439.js.map  594.js  594.js.map  771.css  771.css.map  771.js  771.js.map  844.js  844.js.map  989.css  989.css.map  989.js  989.js.map  Cargo.toml  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  (+2 more)
rotate/js/: 844.app.js  app.js
rotate/src/: Widget.vue  index.js  lib.rs
sepia/: 138.js  138.js.map  480.js  480.js.map  Cargo.toml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map
sepia/js/: 480.app.js  app.js
sepia/src/: index.js  lib.rs
sharpen/: 138.js  138.js.map  150.js  150.js.map  Cargo.toml  lenna.yml  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map
sharpen/src/: index.js  lib.rs
