[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "canny"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = {version = "0.23"}
imageproc = {version = "0.22"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lenna-core = {git = "https://github.com/lenna-project/lenna-core"}
