[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "canny"
version = "0.1.0"
description = "Plugin for canny edges in image."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
plugin = []

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.22", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lenna_core = { version = "0.2", git = "https://github.com/lenna-project/lenna-core", branch = "main" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
