[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "lenna-exif"
version = "0.1.0"
description = "Plugin to change exif data of images."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
plugin = []

[dependencies]
kamadak-exif = "0.5.4"
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lenna_core = { version = "0.2", git = "https://github.com/lenna-project/lenna-core", branch = "main" }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
