[package]
name = "lenna_plugins_py"
version = "0.1.0"
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[features]
default = ["python"]
python = ["ndarray", "ndarray-image", "numpy", "pyo3", "pythonize"]

[dependencies]
image = { version = "0.23.12", default-features = false, features = ["png"] }
paste = "1.0"
pyo3 = {version = "0.13.0", features = ["extension-module"], optional = true }
ndarray = { version = "0.14", optional = true }
ndarray-image = { version = "0.3.0", optional = true }
numpy = {version = "0.13.0", optional = true }
pythonize = { version = "0.13.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lenna_core = {git = "https://github.com/lenna-project/lenna-core", branch="main", features=["python"] }
blur = { path = "../blur", default-features=false, features=[] }
canny = { path = "../canny", default-features=false, features=[] }
cartoonify = { path = "../cartoonify", default-features=false, features=[] }
desaturate = { path = "../desaturate", default-features=false, features=[] }
dramatic = { path = "../dramatic", default-features=false, features=[] }
photon-filters = { path = "../photon-filters", default-features=false, features=[] }
rotate = { path = "../rotate", default-features=false, features=[] }
sepia = { path = "../sepia", default-features=false, features=[] }

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
requires-dist = ["numpy"]
