[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "resize"
version = "0.1.0"
description = "Plugin to resize images."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
plugin = []

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lenna_core = {git = "https://github.com/lenna-project/lenna-core", branch="main" }
