[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "rotate"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = {version = "0.23"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lenna-core = {git = "https://github.com/lenna-project/lenna-core", branch="main" }
